fixed spacing error in difference container

--- a/YStemAndChess/src/app/pages/be-amentor/be-amentor.component.scss
+++ b/YStemAndChess/src/app/pages/be-amentor/be-amentor.component.scss
@@ -53,7 +53,7 @@ body {
         width:42%;
         height:auto;
         margin-right:11%;
-        margin-top:3%;
+        //margin-top:2%;
         font-family:'Roboto';
         font-style:normal;
         font-weight:600; //500
